# test_cmake_git

./: .gitignore  CMakeLists.txt  main.cpp  readme.txt
main_widget/: CMakeLists.txt  mainwidget.cpp  mainwidget.h  mainwidget.ui
